2021年10月23日 星期六 11时23分48秒 CST update pgroonga to v2.3.2 
update pg to v14.1 pgroonga to v2.3.4
upgrade to pg v14.2

upgrade to pg v14.3; pgroonga to v2.3.7
upgrade to pg v14.4

upgrade to pg v14.6; pgroonga to v2.4.4

upgrade to pg v15.1

upgrade to pg v15.2
upgrade to pgroonga 3.0.1

upgrade to pg v15.3; pgroonga to 3.0.2